--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,3 +44,15 @@
 #navLoggedInPic img {
     border-radius: 7px;
 }
+
+.line {
+  fill: none;
+  stroke: orange;
+  stroke-width: 3px;
+  pointer-events: none;
+}
+
+.area {
+  fill: rgba(198, 106, 44, 0.2);
+  pointer-events: none;
+}
